# mnist

./: .gitignore  Dockerfile  line.py  pyproject.toml  run.sh
note/: Untitled.ipynb  mnist-predict.ipynb
src/mnist/: .main.py.swp  db.py  main.py  worker.py
src/mnist/model/: manager.py  model.py
